<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="number_vews">number_vews</string>
    <string name="number_share">number_share</string>
    <string name="vews">vews</string>
    <string name="share">share</string>
    <string name="number_likes">number_likes</string>
    <string name="likes">likes</string>
    <string name="options_menu">options_menu</string>
    <string name="avatar_description">avatar_description</string>
</resources>