<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp">


<ImageView
    android:id="@+id/avatar"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:layout_marginBottom="@dimen/common_spacing"
    android:contentDescription="@string/avatar_description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:srcCompat="@sample/posts.json/data/authorAvatar" />

<TextView
    android:id="@+id/autherName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:layout_marginEnd="@dimen/common_spacing"
    android:ellipsize="end"
    android:singleLine="true"
    app:layout_constraintBottom_toTopOf="@id/published"
    app:layout_constraintEnd_toStartOf="@id/options"
    app:layout_constraintStart_toEndOf="@id/avatar"
    app:layout_constraintTop_toTopOf="@id/avatar"
    tools:text="@sample/posts.json/data/authorName" />

<TextView
    android:id="@+id/published"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:layout_marginEnd="@dimen/common_spacing"
    android:ellipsize="end"
    android:singleLine="true"
    app:layout_constraintBottom_toBottomOf="@id/avatar"
    app:layout_constraintEnd_toStartOf="@id/options"
    app:layout_constraintStart_toEndOf="@id/avatar"
    app:layout_constraintTop_toBottomOf="@id/autherName"
    tools:text="@sample/posts.json/data/published" />

<ImageButton
    android:id="@+id/options"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:background="@android:color/transparent"
    android:contentDescription="@string/options_menu"
    android:src="@drawable/ic_options_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

<androidx.constraintlayout.widget.Barrier
    android:id="@+id/barrier"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="avatar, published, options"
    />

<TextView
    android:id="@+id/content"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/common_spacing"
    android:layout_marginBottom="@dimen/common_spacing"
    android:autoLink="web"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/barrier"
    tools:text="@sample/posts.json/data/content" />

<androidx.constraintlayout.widget.Barrier
    android:id="@+id/barrier2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="content" />

<ImageButton
    android:id="@+id/likes"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:background="@android:color/transparent"
    android:contentDescription="@string/likes"
    android:src="@drawable/ic_like_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/barrier2"
    tools:ignore="ImageContrastCheck" />

<TextView
    android:id="@+id/item_likes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/text_spacing"
    android:text="@string/number_likes"
    app:layout_constraintBottom_toBottomOf="@id/likes"
    app:layout_constraintStart_toEndOf="@id/likes"
    app:layout_constraintTop_toBottomOf="@id/barrier2" />

<ImageButton
    android:id="@+id/share"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:background="@android:color/transparent"
    android:contentDescription="@string/share"
    android:layout_marginStart="@dimen/common_spacing"
    android:src="@drawable/ic_share_24"
    app:layout_constraintStart_toEndOf="@id/item_likes"
    app:layout_constraintTop_toBottomOf="@id/barrier2"
    tools:ignore="ImageContrastCheck"
    />

    <TextView
        android:id="@+id/item_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_spacing"
        android:text="@string/number_share"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

<TextView
    android:id="@+id/item_vews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/text_spacing"
    android:text="@string/number_vews"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/vews"
    app:layout_constraintTop_toBottomOf="@id/barrier2" />

<ImageButton
    android:id="@+id/vews"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:background="@android:color/transparent"
    android:contentDescription="@string/vews"
    android:layout_marginEnd="@dimen/text_spacing"
    android:src="@drawable/ic_visibility_24"
    app:layout_constraintEnd_toStartOf="@id/item_vews"
    app:layout_constraintTop_toBottomOf="@id/barrier2"
    tools:ignore="ImageContrastCheck"
    />


</androidx.constraintlayout.widget.ConstraintLayout>

